# llm-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  architecture.md  changelog.md  cli.md  conf.py  design.md  getting-started.md  glossary.md  index.md  metrics-reference.md  metrics.md  requirements.txt
docs/api/: drift.md  index.md  metrics.md  reporters.md  runner.md  types.md
docs/user-guide/: ci-integration.md  custom-adapters.md  drift-detection.md  evaluation.md  golden-sets.md
examples/: quickstart.py  research_kb_eval.py
src/ir_eval/: compare.py  runner.py
src/ir_eval/drift/: baseline.py  detector.py
src/ir_eval/metrics/: agreement.py  confidence.py
src/ir_eval/reporters/: markdown.py
src/ir_eval_research_kb/: adapter.py
src/llm_eval/: __init__.py  adapter.py  compare.py  runner.py  types.py
src/llm_eval/cli/: __init__.py  main.py
src/llm_eval/drift/: __init__.py  alerts.py  baseline.py  detector.py
src/llm_eval/metrics/: __init__.py  agreement.py  confidence.py  ranking.py
src/llm_eval/reporters/: __init__.py  console.py  json_reporter.py  markdown.py
src/llm_eval_research_kb/: __init__.py  adapter.py
tests/: conftest.py  test_agreement_metrics.py  test_cli.py  test_confidence.py  test_drift_detector.py  test_ranking_metrics.py  test_reporters.py  test_runner.py  test_types.py
tests/fixtures/: golden_research_kb.json  golden_small.json
