[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ir-eval"
version = "0.1.0"
description = "Statistical RAG evaluation framework with golden-set metrics and drift detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Brandon Behring" },
]
keywords = ["information-retrieval", "rag", "evaluation", "llm", "retrieval", "metrics", "drift-detection", "ci-cd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/brandon-behring/ir-eval"
Repository = "https://github.com/brandon-behring/ir-eval"
Issues = "https://github.com/brandon-behring/ir-eval/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
scipy = [
    "scipy>=1.11",
]
docs = [
    "sphinx>=7.0,<8.0",
    "sphinx-autodoc-typehints>=2.0",
    "furo>=2024.1",
    "myst-parser>=2.0,<4.0",
    "myst-nb>=1.0,<2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
]

[project.scripts]
ir-eval = "ir_eval.cli.main:app"

[project.entry-points."ir_eval.adapters"]
research-kb = "ir_eval_research_kb:ResearchKBAdapter"

[tool.hatch.build.targets.wheel]
packages = ["src/ir_eval", "src/ir_eval_research_kb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    "E501",  # line length (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true
